# quantico-energy

./: README.md
EDA/: despike_data.ipynb  feature_engineering.ipynb  features.csv  modeling_tests.ipynb  pyproject.toml
EDA/Permian/: CWE_CWEI_CHK209133H_MDS.csv  CWE_Collier415181H_MDS.csv  CWE_CollierHammettState_1H_MDS.csv  CWE_Golding_Hills_State_211H_MDS.csv  CWE_Russell274131H_MDS.csv  CWE_StClair182Unit1H_MDS.csv
EDA/permian_despiked_120523/: CWE_BlakeCollierState25281H_MDS.csv  CWE_CWEI_CHK209133H_MDS.csv  CWE_Collier415181H_MDS.csv  CWE_CollierHammettState_1H_MDS.csv  CWE_Golding_Hills_State_211H_MDS.csv  CWE_Russell274131H_MDS.csv  CWE_StClair182Unit1H_MDS.csv  OXY_AK235H_MDS.csv  OXY_Gorilla204H_MDS.csv
EDA/results/: CWE_BlakeCollierState25281H_MDS_30ftwindow_nonoverlap_all_features_gamma.csv  CWE_BlakeCollierState25281H_MDS_errors_30ftwindow_nonoverlap_all_features_gamma.csv  descriptive_overlapping_window_gammaatbit_CWE_BlakeCollierState25281H_MDS.csv.csv  mean_nonoverlaping_window_predictgamma_30ftahead_ofbitCWE_BlakeCollierState25281H_MDS.csv.csv
Permian/: CWE_BlakeCollierState25281H_MDS.csv  OXY_AK235H_MDS.csv  OXY_Gorilla204H_MDS.csv
