[tool.poetry]
name = "eda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
umap-learn = "^0.5.5"
tsfresh = "^0.20.1"
nptyping = "^2.5.0"
pmdarima = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
